--- a/playbook.yml
+++ b/playbook.yml
@@ -17,3 +17,22 @@
     
     - name: Create folder using shell module
       shell: "mkdir /tmp/samplefolderusingshellmodule"
+      when: output.stat.exists!=true
+    
+    - name: Create files using loops
+      file:
+        path: "/tmp/samplefolderusingshellmodule/{{ item }}"
+        state: touch
+      with_items:
+        - file1
+        - file2
+        - file3
+
+    - name: Create files using loop with multiple sub keys
+      file:
+        path: "/tmp/samplefolderusingshellmodule/{{ item.filename }}.{{ item.extension }}"
+        state: touch
+      with_items:
+        - { filename: "samplefile", extension: "xml" }
+        - { filename: "samplefile2", extension: "html" } 
+        - { filename: "samplefile3", extension: "sh" } 
