--- a/roles/create_folder_role/defaults/main.yml
+++ b/roles/create_folder_role/defaults/main.yml
@@ -1,2 +1,3 @@
-foldername: samplefolder
+foldername: "samplefolder"
 folderlocation: "/tmp/{{ foldername }}"
+folder2name: "samplefolderusingshellmodule"
